@@ -143,16 +143,16 @@ class ELFTest(unittest.TestCase):
                 print("test => read(%d, %s, %d)" % (read_fd, pathname, read_count))
                 target = True
 
-            syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
+            regreturn = syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
 
             if target:
                 real_path = ql.os.fd[read_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == ql.mem.read(read_buf, read_count).decode()
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_write(ql, write_fd, write_buf, write_count, *args):
             target = False
@@ -162,16 +162,16 @@ class ELFTest(unittest.TestCase):
                 print("test => write(%d, %s, %d)" % (write_fd, pathname, write_count))
                 target = True
 
-            syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
+            regreturn = syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
 
             if target:
                 real_path = ql.os.fd[write_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == 'Hello testing\x00'
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args):
             target = False
@@ -181,15 +181,15 @@ class ELFTest(unittest.TestCase):
                 print("test => openat(%d, %s, 0x%x, 0%o)" % (openat_fd, pathname, openat_flags, openat_mode))
                 target = True
 
-            syscall.ql_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args)
+            regreturn = syscall.ql_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == True
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_unlink(ql, unlink_pathname, *args):
             target = False
@@ -199,11 +199,13 @@ class ELFTest(unittest.TestCase):
                 print("test => unlink(%s)" % (pathname))
                 target = True
 
-            syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
+            regreturn = syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == False
+
+            return regreturn
 
         def test_syscall_truncate(ql, trunc_pathname, trunc_length, *args):
             target = False
@@ -213,15 +215,15 @@ class ELFTest(unittest.TestCase):
                 print("test => truncate(%s, 0x%x)" % (pathname, trunc_length))
                 target = True
 
-            syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
+            regreturn = syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args):
             target = False
@@ -235,15 +237,15 @@ class ELFTest(unittest.TestCase):
                 print("test => ftruncate(%d, 0x%x)" % (ftrunc_fd, ftrunc_length))
                 target = True
 
-            syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
+            regreturn = syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0x10
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         ql = Qiling(["../examples/rootfs/x86_linux/bin/x86_posix_syscall"], "../examples/rootfs/x86_linux", output="debug")
         ql.set_syscall(0x3, test_syscall_read)
@@ -429,25 +431,25 @@ class ELFTest(unittest.TestCase):
         def test_syscall_read(ql, read_fd, read_buf, read_count, *args):
             target = False
             pathname = ql.os.fd[read_fd].name.split('/')[-1]
-            
+
             reg = ql.reg.read("x0")
             print("reg : 0x%x" % reg)
             ql.reg.x0 = reg  
-        
+
             if pathname == "test_syscall_read.txt":
                 print("test => read(%d, %s, %d)" % (read_fd, pathname, read_count))
                 target = True
 
-            syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
+            regreturn = syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
 
             if target:
                 real_path = ql.os.fd[read_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == ql.mem.read(read_buf, read_count).decode()
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
 
         def test_syscall_write(ql, write_fd, write_buf, write_count, *args):
@@ -458,16 +460,16 @@ class ELFTest(unittest.TestCase):
                 print("test => write(%d, %s, %d)" % (write_fd, pathname, write_count))
                 target = True
 
-            syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
+            regreturn = syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
 
             if target:
                 real_path = ql.os.fd[write_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == 'Hello testing\x00'
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
 
         def test_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args):
@@ -478,15 +480,15 @@ class ELFTest(unittest.TestCase):
                 print("test => openat(%d, %s, 0x%x, 0%o)" % (openat_fd, pathname, openat_flags, openat_mode))
                 target = True
 
-            syscall.ql_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args)
+            regreturn = syscall.ql_syscall_openat(ql, openat_fd, openat_path, openat_flags, openat_mode, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == True
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
 
         def test_syscall_unlink(ql, unlink_pathname, *args):
@@ -497,11 +499,13 @@ class ELFTest(unittest.TestCase):
                 print("test => unlink(%s)" % (pathname))
                 target = True
 
-            syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
+            regreturn = syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == False
+
+            return regreturn
 
 
         def test_syscall_truncate(ql, trunc_pathname, trunc_length, *args):
@@ -512,15 +516,15 @@ class ELFTest(unittest.TestCase):
                 print("test => truncate(%s, 0x%x)" % (pathname, trunc_length))
                 target = True
 
-            syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
+            regreturn = syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
 
         def test_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args):
@@ -531,15 +535,15 @@ class ELFTest(unittest.TestCase):
                 print("test => ftruncate(%d, 0x%x)" % (ftrunc_fd, ftrunc_length))
                 target = True
 
-            syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
+            regreturn = syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0x10
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         ql = Qiling(["../examples/rootfs/arm64_linux/bin/arm64_posix_syscall"], "../examples/rootfs/arm64_linux", output="debug")
         ql.set_syscall(0x3f, test_syscall_read)
@@ -583,17 +587,18 @@ class ELFTest(unittest.TestCase):
                 print("test => read(%d, %s, %d)" % (read_fd, pathname, read_count))
                 target = True
 
-            syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
+            regreturn = syscall.ql_syscall_read(ql, read_fd, read_buf, read_count, *args)
 
             if target:
                 real_path = ql.os.fd[read_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == ql.mem.read(read_buf, read_count).decode()
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
- 
+
+            return regreturn
+
+
         def test_syscall_write(ql, write_fd, write_buf, write_count, *args):
             target = False
             pathname = ql.os.fd[write_fd].name.split('/')[-1]
@@ -602,16 +607,16 @@ class ELFTest(unittest.TestCase):
                 print("test => write(%d, %s, %d)" % (write_fd, pathname, write_count))
                 target = True
 
-            syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
+            regreturn = syscall.ql_syscall_write(ql, write_fd, write_buf, write_count, *args)
 
             if target:
                 real_path = ql.os.fd[write_fd].name
                 with open(real_path) as fd:
                     assert fd.read() == 'Hello testing\x00'
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_open(ql, open_pathname, open_flags, open_mode, *args):
             target = False
@@ -621,15 +626,15 @@ class ELFTest(unittest.TestCase):
                 print("test => open(%s, 0x%x, 0%o)" % (pathname, open_flags, open_mode))
                 target = True
 
-            syscall.ql_syscall_open(ql, open_pathname, open_flags, open_mode, *args)
+            regreturn = syscall.ql_syscall_open(ql, open_pathname, open_flags, open_mode, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == True
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_unlink(ql, unlink_pathname, *args):
             target = False
@@ -639,11 +644,13 @@ class ELFTest(unittest.TestCase):
                 print("test => unlink(%s)" % (pathname))
                 target = True
 
-            syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
+            regreturn = syscall.ql_syscall_unlink(ql, unlink_pathname, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.path.isfile(real_path) == False
+
+            return regreturn
 
         def test_syscall_truncate(ql, trunc_pathname, trunc_length, *args):
             target = False
@@ -653,15 +660,15 @@ class ELFTest(unittest.TestCase):
                 print("test => truncate(%s, 0x%x)" % (pathname, trunc_length))
                 target = True
 
-            syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
+            regreturn = syscall.ql_syscall_truncate(ql, trunc_pathname, trunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         def test_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args):
             target = False
@@ -671,15 +678,15 @@ class ELFTest(unittest.TestCase):
                 print("test => ftruncate(%d, 0x%x)" % (ftrunc_fd, ftrunc_length))
                 target = True
 
-            syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
+            regreturn = syscall.ql_syscall_ftruncate(ql, ftrunc_fd, ftrunc_length, *args)
 
             if target:
                 real_path = ql.os.transform_to_real_path(pathname)
                 assert os.stat(real_path).st_size == 0x10
-                if ql.platform == QL_OS.WINDOWS:
-                    return
-                else:    
+                if ql.platform != QL_OS.WINDOWS:
                     os.remove(real_path)
+
+            return regreturn
 
         ql = Qiling(["../examples/rootfs/mips32el_linux/bin/mips32el_posix_syscall"], "../examples/rootfs/mips32el_linux", output="debug")
         ql.set_syscall(4003, test_syscall_read)
